// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`BooksHero matches snapshot (dark mode) 1`] = `
<div>
  <section
    class="MuiBox-root css-j2vakj"
    data-testid="books-hero"
  >
    <div
      class="MuiContainer-root MuiContainer-maxWidthMd css-u4uvlt-MuiContainer-root"
    >
      <div
        style="display: flex; flex-direction: column; align-items: center;"
      >
        <div>
          <p
            class="MuiTypography-root MuiTypography-body1 css-1dqn75d-MuiTypography-root"
          >
            10
             books read
          </p>
        </div>
        <div>
          <h1
            class="MuiTypography-root MuiTypography-h1 css-by9t2r-MuiTypography-root"
          >
            My Reading Library
          </h1>
        </div>
        <div>
          <p
            class="MuiTypography-root MuiTypography-body1 css-u503td-MuiTypography-root"
          >
            A collection of books that have shaped my thinking — from software craft to philosophy, psychology, and everything in between.
          </p>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`BooksHero matches snapshot (light mode) 1`] = `
<div>
  <section
    class="MuiBox-root css-ok4pej"
    data-testid="books-hero"
  >
    <div
      class="MuiContainer-root MuiContainer-maxWidthMd css-u4uvlt-MuiContainer-root"
    >
      <div
        style="display: flex; flex-direction: column; align-items: center;"
      >
        <div>
          <p
            class="MuiTypography-root MuiTypography-body1 css-emv0vm-MuiTypography-root"
          >
            10
             books read
          </p>
        </div>
        <div>
          <h1
            class="MuiTypography-root MuiTypography-h1 css-enyzco-MuiTypography-root"
          >
            My Reading Library
          </h1>
        </div>
        <div>
          <p
            class="MuiTypography-root MuiTypography-body1 css-1eco2nv-MuiTypography-root"
          >
            A collection of books that have shaped my thinking — from software craft to philosophy, psychology, and everything in between.
          </p>
        </div>
      </div>
    </div>
  </section>
</div>
`;
